Bugfix: Layout issues in CSS that caused two bugs in the sample windows:
* The height of the sample windows would not follow the browser zoom
* Scrolling was broken, making navigation through lots of samples very
difficult.
This fixes layout issues with latest version of Firefox, as well as
Chrome.

--- a/vis/extern/BrowserLib/WindowManager/Styles/WindowManager.css
+++ b/vis/extern/BrowserLib/WindowManager/Styles/WindowManager.css
@@ -446,6 +446,7 @@
 {
 	overflow-x: hidden;
 	overflow-y: scroll;
+	height: inherit;
 }
 
 .GridRow
